--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^4.0.0",
+    "aos": "^2.3.4",
     "astro": "^2.10.14",
     "tailwindcss": "^3.3.3"
   }
